--- a/site.css
+++ b/site.css
@@ -10,6 +10,7 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    display: block;
 }
 
 .topnav a:hover {
@@ -20,4 +21,27 @@
 .topnav a.active {
     background-color: indigo;
     color: white;
+}
+
+.tapnav input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+        float: none;
+        display: block;
+        text-aligh: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    .topnav input[type=text] {
+        border: 1px solid #ccc;
+    }
 }
