--- a/site.css
+++ b/site.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
 .topnav {
     background-color: blueviolet;
     overflow: hidden;
